[metadata]
name = dns_deep_state
version = 0.0.1
author = Gabriel Filion
author_email = gabster@lelutin.ca
description = Find all secrets about DNS governing a domain
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license_files = LICENSE
url = https://github.com/lelutin/dns_deep_state
project_urls =
    Bug Tracker = https://github.com/lelutin/dns_deep_state/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Internet :: Name Service (DNS)

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    dnspython
    publicsuffix2
    whoisit>=2.2.0

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-mock
    flake8
    flake8-builtins
    flake8-type-checking
    flake8-rst-docparams
    flake8-comprehensions
    pep8-naming

[flake8]
select = E,F,W,C90,C40,TC,TC1,DP
per-file-ignores =
    tests/*:DP
max-complexity = 10
# The GitHub editor is 127 chars wide
max-line-length = 127
