[metadata]
name = dns_deep_state
version = 0.0.1
author = Gabriel Filion
author_email = gabster@lelutin.ca
description = Find all secrets about DNS governing a domain
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license_files = LICENSE
url = https://github.com/lelutin/dns_deep_state
project_urls =
    Bug Tracker = https://github.com/lelutin/dns_deep_state/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Internet :: Name Service (DNS)
    Topic :: System :: Systems Administration
    Topic :: Utilities
    Environment :: Console
    Intended Audience :: Customer Service
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    dnspython
    publicsuffix2
    whoisit>=2.2.0

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-mock
    pytest-cov
lint =
    flake8
    flake8-builtins
    flake8-type-checking
    flake8-rst-docparams
    flake8-comprehensions
    flake8-sfs
    pep8-naming
types =
    mypy

[flake8]
select = E,F,W,C90,C40,TC,TC1,DP,SFS
# We want to use only f-strings in this project
extend-ignore = SFS301
per-file-ignores =
    tests/*:DP
max-complexity = 10
# The GitHub editor is 127 chars wide
max-line-length = 127

[tool:pytest]
addopts = --cov=dns_deep_state
markers =
    integration: Tests that run real queries against rdap, whois and dns (deselect with '-m "not integration"')

[mypy]
ignore_missing_imports = True

[coverage:run]
branch = True

[coverage:report]
fail_under = 90
show_missing = True
skip_empty = True
